# Minigames

./: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  CMakeLists.txt  README.md  Wheel.cpp  Wheel.h  circle.cpp  circle.h  cloud.cpp  cloud.h  color.txt  dog.txt  flappy.txt  graphics.cpp  graphics.h  oval.cpp  oval.h  pong.txt  quad.cpp  quad.h  shape.cpp  shape.h  start.txt  welcome.txt  winner.txt
